--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -36,6 +36,10 @@
 @import "components/hue-shepherd.less";
 @import "hue-helpers.less";
 
+body {
+  background-color: @cui-white;
+}
+
 input[type='password']::-ms-reveal {
   display: none;
 }
