--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -784,6 +784,7 @@ a:visited {
   background-color: @cui-gray-200;
 }
 
+#contextPopover .hue-popover,
 #sqlContextPopover .hue-popover {
   position: fixed;
 }
