--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -551,6 +551,11 @@ a:visited {
   border: 1px solid transparent;
 }
 
+.hue-context-popover {
+  padding: 0;
+  border: none;
+}
+
 .hue-popover.hue-popover-top {
   margin-top: -5px;
 }
@@ -787,6 +792,43 @@ a:visited {
 #contextPopover .hue-popover,
 #sqlContextPopover .hue-popover {
   position: fixed;
+}
+
+.context-popover-title {
+  .display-flex;
+  .flex-direction(row);
+  width: 100%;
+  padding:0;
+  background-color: @cui-gray-050;
+}
+
+.context-popover-breadcrumbs {
+  .flex(1 1 100%);
+  .nowrap-ellipsis();
+  padding: 5px;
+}
+
+.context-popover-close {
+  .flex(1 0 15px);
+  padding: 5px;
+}
+
+.context-popover-content {
+  padding: 5px;
+}
+
+.hue-breadcrumb-container {
+  .hue-breadcrumb {
+    display: inline-block;
+  }
+
+  .hue-breadcrumb-divider {
+    display: inline-block;
+  }
+
+  .dropdown-menu {
+    overflow-y: scroll;
+  }
 }
 
 /* styling for the imported apps */
