HUE-7072 [importer] Disable fields that are not marked as keep

--- a/desktop/libs/indexer/src/indexer/static/indexer/less/importer.less
+++ b/desktop/libs/indexer/src/indexer/static/indexer/less/importer.less
@@ -135,6 +135,10 @@
     padding: 4px;
     padding-left: 10px;
     border-left: 4px solid @cui-blue-050;
+    &.disabled {
+      background-color: @cui-gray-050;
+      border-left: 4px solid @cui-gray-100;
+    }
   }
 
   .operation {
