HUE-7030 [jb] Style Oozie SLA not available page

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -522,3 +522,12 @@ ul.errorlist {
 .move {
   cursor: move;
 }
+
+.empty-wrapper {
+  margin-top: 50px;
+  color: @cui-gray-500;
+  line-height: 60px;
+  i {
+    font-size: 100px;
+  }
+}
