HUE-7758 [dashboard] Multi select and single select text facet

--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
@@ -798,6 +798,11 @@
     vertical-align: middle;
   }
 
+  .facet-count {
+    overflow: auto;
+    max-height: 110px;
+  }
+
   .gridster {
     .remove-widget, .remove-empty-gridster {
       opacity: 0;
