HUE-7848 [dashboard] Add widget's field list could present more metadata

--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
@@ -548,4 +548,12 @@
     margin-top: 1px;
   }
 
+  #addFacetDemiModal .inline-autocomplete-container {
+    width: 220px;
+    height: 30px;
+  }
+
+  #addFacetDemiModal .inline-autocomplete-container .inline-autocomplete-input {
+    width: calc(100% ~"-" 10px);
+  }
 }
