--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
@@ -277,6 +277,7 @@
   .fields-chooser li {
     cursor: pointer;
     margin-bottom: 10px;
+    padding: 0px;
   }
 
   .fields-chooser li .badge {
@@ -426,6 +427,7 @@
   }
 
   .demi-modal {
+    z-index: 1038;
     min-height: 80px;
     .typeahead {
       position: fixed;
