HUE-7982 [autocomplete] Give arrow key usage priority over mouse hover in the autocomplete suggestions list

--- a/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
@@ -112,7 +112,9 @@
   line-height: 18px;
 }
 
-.autocompleter-suggestion:hover,
+.autocompleter-suggestion:hover {
+  background-color: @cui-blue-010;
+}
 .autocompleter-suggestion.selected {
   background-color: @hue-primary-color-light;
 }
